--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a href = "#Contactanos" onclick = "closeNav()">Contacto</a>
                 </li>
                 <li>
-                    <a href = "/templates/portfolio.html" onclick = "closeNav()">Portfolio</a>
+                    <a href = "./templates/portfolio.html" onclick = "closeNav()">Portfolio</a>
                 </li>
                 <li>
                     <a href = "/templates/working.html" onclick = "closeNav()">Más...</a>
